--- a/main.html
+++ b/main.html
@@ -8,6 +8,18 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<ol>
+		<li data-ns-test="shoppingList">A New Laptop</li>
+		<li data-ns-test="shoppingList">A best balanced no immersion bycycle</li>
+		<li data-ns-test="shoppingList">Gyming tools</li>
+	</ol>
+
+	<ul>
+		<li data-ns-test = "holidayList">kedarnath</li>
+		<li data-ns-test = "holidayList">Flowers velly</li>
+		<li data-ns-test = "holidayList">Jog falls in karnataka</li>
+		
+	</ul>
     <script type="text/javascript" src="./script.js">
 </script>
 
